--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                 <!-- Post content here -->
             </div>
         </article>
+
+        <!-- Image Lightbox -->
+        <div id="lightbox" class="lightbox">
+            <div class="lightbox-close">×</div>
+            <img id="lightbox-img" src="" alt="">
+        </div>
     </main>
 
     <script src="app.js"></script>
