--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 
-    <main id="content">
+    <main id="content" class="homepage-main">
         <section class="hero-section">
             <h1 class="blog-title">Young God</h1>
             <p class="blog-subtitle">Artificial and Organic intelligence</p>
